# simulink-argos

./: README.md  startupEnvironment.m
examples/: CMakeLists.txt
examples/controllers/: CMakeLists.txt
examples/controllers/matlab_test/: CMakeLists.txt  matlab_test.cpp  matlab_test.h
examples/controllers/matlab_test/testArgosModel/: buildInfo.mat  defines.txt  emlrt.h  ert_main.cpp  mexAdapter.hpp  rtwtypes.h  simstruc_implement.h  simstruc_internal.h  testArgosModel.cpp  testArgosModel.h  testArgosModel_private.h  testArgosModel_types.h
examples/controllers/testArgosModelCtrl/: CMakeLists.txt  testArgosModelCtrl.cpp  testArgosModelCtrl.h
examples/controllers/testArgosModelCtrl/testArgosModel/: ARGoSDifferentialSteeringWrapper.cpp  buildInfo.mat  ert_main.cpp  rtwtypes.h  simstruc.h  testArgosModel.cpp  testArgosModel.h  testArgosModel_private.h  testArgosModel_types.h
examples/experiments/: matlab_gen_test.argos  matlab_gen_test_multiple.argos
examples/models/: testArgosModel.slx
sl_argos/: createARGoSModel.m  exportARGoSCode.m  exportGeneratedCode.m
sl_argos/actuators/: ARGoSDifferentialSteering.m
sl_argos/include/: ARGoSDifferentialSteeringWrapper.h
sl_argos/sensors/: ARGoSFootBotProximitySensor.m
sl_argos/sensors/include/: ARGoSFootBotProximitySensorWrapper.h
sl_argos/sensors/src/: ARGoSFootBotProximitySensorWrapper.cpp
sl_argos/src/: ARGoSFootBotProximitySensorWrapper.cpp~
sl_argos/template/: argosModelTemplate.sltx  argos_cmakelists_template.txt  argos_ctrl_template.cpp  argos_ctrl_template.h
